--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </style>
 </head>
 <body>
-    <h1>Rehan shaikh</h1>
+    <h1 style="text-align: center;"> Rehan Shaikh</h1>
     
     <div class="oneDiv">
         <button onclick="pushLast()">Push</button>
